fix: Update CORS configuration to use allowedOrigins and set allowCredentials to true